// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the Engineer card renders correctly when loading is false 1`] = `
<div
  className="engineer-bio-wrapper"
>
  <h3
    className="profile-card-header"
  >
    My Profile
  </h3>
  <div
    className="bio-card text-center"
  >
    <ProfileCard
      firstName="Cristian"
      lastName="Bartell"
    />
    <ProjectCards
      endDate=""
      projectLevel="Apprenticeship"
      projectName="WatchTower"
      startDate=""
      technologies="PHP/JavaScript"
    />
    <ProjectCards
      endDate=""
      projectLevel="Simulations"
      projectName="AuthorsHaven"
      startDate=""
      technologies="Python/Django"
    />
  </div>
</div>
`;

exports[`tests the Engineer card renders correctly when loading is true 1`] = `
<div
  className="engineer-bio-wrapper"
>
  <h3
    className="profile-card-header"
  >
    My Profile
  </h3>
  <div
    className="bio-card text-center"
  >
    <ProfileCard />
    <ProjectCards
      projectLevel="Apprenticeship"
    />
    <ProjectCards
      projectLevel="Simulations"
    />
  </div>
</div>
`;
